--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -25,7 +25,7 @@
             margin-left: 2%;
             float: left;
             clear: none;
-
+            color: #fff;
             &:first-child {
                 margin-left: 0;
             }
@@ -37,10 +37,10 @@
     input[type='email'] {
         width: 100%;
         border: 0;
-        background: #115173;
+        background: #777777;
         height: 50px;
         font-size: 16px;
-        color: #fff;
+        color: #ffffff;
         padding: 0 20px;
         box-sizing: border-box;
     }
@@ -57,13 +57,13 @@
     }
 
     .flat-button {
-        color: #ffd700;
+        color: #ff3131;
         background: 0 0;
         font: 11px;
         letter-spacing: 3px;
         text-decoration: none;
         padding: 8px 10px;
-        border: 1px solid #ffd700;
+        border: 1px solid #ff3131;
         float: right;
         border-radius: 4px;
     }
