--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -44,7 +44,7 @@
         h1 {
             font-size: 53px;
             font-family: 'Coolvetica';
-            color: #ffd700;
+            color: #ff3131;
             font-weight: 400;
             margin-top: 0;
             position: relative;
@@ -77,7 +77,7 @@
 
         p {
             font-size: 18px;
-            color: #8d8d8d;
+            color: #ffffff;
             font-family: sans-serif;
             font-weight: 300;
             min-width: fit-content;
